--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,11 @@
 [run]
 omit =
-    venv/*
-    */python?.?/*
-    */site-packages/nose/*
+    */tests*
 
 [report]
-omit =
-    venv/*
-    */python?.?/*
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    def parse_args
