--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
  - "3.5.2"	
 cache: pip	
 install:	
- - pip install -r requirements.txt
+ - pip install -r Requirements.txt
  - pip install coveralls
  - pip install codeclimate-test-reporter
 
